<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smartdev.provinsiindonesia.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:scaleType="fitXY"
            android:layout_alignParentTop="true"
            android:src="@mipmap/ic_launcher" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/img_detail">

            <TableRow
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/provinsi" />

                <TextView
                    android:id="@+id/tv_provinsi"
                    style="@style/TextSpec.Value"/>

            </TableRow>
            <TableRow
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/kota" />

                <TextView
                    android:id="@+id/tv_kota"
                    style="@style/TextSpec.Value"/>

            </TableRow>
            <TableRow
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/pulau" />

                <TextView
                    android:id="@+id/tv_pulau"
                    style="@style/TextSpec.Value"/>

            </TableRow>
            <TableRow
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/julukan" />

                <TextView
                    android:id="@+id/tv_julukan"
                    style="@style/TextSpec.Value"/>

            </TableRow>
            <TableRow
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/semboyan" />

                <TextView
                    android:id="@+id/tv_semboyan"
                    style="@style/TextSpec.Value"/>

            </TableRow>

        </TableLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_item_keterangan"
            android:text="@string/keterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

</LinearLayout>